# Zamarine

./: .gitmodules  BootConfig.rs  Makefile  README.md  bios.rs  bootloader.rs  cocoatly.dev.rs  lib.rs  uart.rs
.github/workflows/: RCP.yml
.svmod/: com.sv  mod.sv
.zebra/: cabin.vbs  zebra.json
Drizzle/: drizzle_client.devrc
Fabric/: build.ps1
Fabric/include/: fabric.h
Fabric/src/core/: Cargo.toml  config.rs  lib.rs  persistence.rs  search.asm
Fabric/src/core/distributed/: coordinator.rs  mod.rs  node.rs  sharding.rs
Fabric/src/core/search/: algorithms.rs  metrics.rs  mod.rs
Fabric/wrapper/: Fabric.cs
apps/hello-asm/: Makefile  main.asm
apps/hello-c/: Makefile  main.c
apps/hello-rust/: Cargo.toml
apps/hello-rust/src/: main.rs
assets/cursor/Tail/Dark/Regular/: handwriting.cur  help.cur  working.ani
assets/cursor/Tail/Dark/Small/: Pointer.cur  Working.ani  help.cur
assets/public/docker/: index.html  script.js  styles.css
cli/zamarine-cli/: Cargo.toml
cli/zamarine-cli/src/: main.rs
docker/: Dockerfile  Dockerfile.kernel
kernel/: boot.asm  gdt.asm  interrupts.asm  interrupts.c  main.c
kernel/config/: zamarine.config
kernel/include/: kernel.h
kernel/mm/: pmm.c  vmm.c
lib/: Host-That-Runs-OS-Detector.rs  SmartModWasm.rs  info.txt  tpm2.rs
lib/APR/: CHANGES  CMakeLists.txt  Makefile.in  NOTICE  apr-config.in  configure.in
lib/APR/.github/workflows/: linux.yml  macos.yml  windows.yml
lib/APR/atomic/netware/: apr_atomic.c
lib/APR/atomic/os390/: atomic.c
lib/APR/atomic/unix/: builtins.c  builtins64.c  ia32.c  mutex64.c  ppc.c  s390.c  solaris.c
lib/APR/atomic/win32/: apr_atomic.c  apr_atomic64.c
lib/APR/encoding/: apr_escape.c
lib/APR/file_io/os2/: filedup.c
lib/APR/file_io/unix/: filedup.c  mktemp.c  readwrite.c
lib/APR/file_io/win32/: dir.c  filedup.c  filestat.c  pipe.c  readwrite.c  seek.c
lib/APR/include/: apr.h.in  apr.hw  apr.hwc
lib/APR/include/arch/netware/: apr_private.h
lib/APR/include/arch/unix/: apr_arch_atomic.h  (+2 more)
lib/APR/locks/unix/: proc_mutex.c  thread_mutex.c
lib/APR/memory/unix/: apr_pools.c
lib/APR/misc/win32/: apr_app.c  misc.c
lib/APR/network_io/unix/: sockaddr.c
lib/APR/network_io/win32/: sendrecv.c  sockets.c
lib/APR/poll/os2/: poll.c  pollset.c
lib/APR/poll/unix/: epoll.c  poll.c  pollset.c  wakeup.c  z_asio.c
lib/APR/random/unix/: apr_random.c  sha2.c
lib/APR/shmem/unix/: shm.c
lib/APR/support/unix/: waitio.c
lib/APR/tables/: apr_skiplist.c  apr_tables.c
lib/APR/test/: Makefile.in  abts.c  abts.h  proc_child.c  sendfile.c  testatomic.c  testdir.c  testescape.c  testfile.c  testfnmatch.c  testlock.c  testmutexscope.c  testpoll.c  testproc.c  testshm.c  testshm.h  testshmconsumer.c  testshmproducer.c  testsock.c  teststr.c  testutil.c
lib/APR/threadproc/os2/: thread.c
lib/APR/threadproc/win32/: thread.c
lib/APR/time/unix/: time.c
lib/APR/time/win32/: time.c
lib/APR/user/win32/: userinfo.c
lib/GLib/: Makefile.in  config.h.in  configure
lib/GLib/docs/: glib.html  glib_toc.html
lib/xchemoxide/: CMakeLists.txt
lib/xchemoxide/examples/: example.c
lib/xchemoxide/include/: xchemoxide.h
lib/xchemoxide/src/: xchemoxide.c
libmodbus/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  Makefile.am  NEWS  README.md  SECURITY.md  `.lib  autogen.sh  configure.ac
libmodbus/src/: modbus-data.c  modbus-private.h  modbus-rtu.c  modbus-tcp.c  modbus.c  modbus.h
libmodbus/src/win32/: README.md  config.h.win32  modbus.vcproj
libmodbus/tests/: Makefile.am  README.md  bandwidth-client.c  bandwidth-server-many-up.c  bandwidth-server-one.c  random-test-client.c  random-test-server.c  unit-test-client.c  unit-test-server.c  unit-test.h.in  version.c
linux/: Cargo.toml
linux/core/kernel/: Cargo.toml
linux/core/kernel/src/: lib.rs  process.rs  sync.rs
linux/system/services/: __init__.py  process_manager.py  service_manager.py  system_monitor.py
live-build/auto/: build  config
live-build/config/: packages.chroot
live-build/config/hooks/normal/: 001-fetch-assets.chroot  010-branding.chroot  020-rustup.chroot  030-install-demo-apps.chroot  040-sysctl.chroot  050-zram.chroot  060-flatpak.chroot  070-install-cli.chroot  080-system-defaults.chroot
live-build/config/package-lists/: zamarine.list.chroot
macro/: shortcuts.ahk
modules/rcp1/: pom.xml
modules/rcp1/config/: rcp1.ini
modules/rcp1/lua/: rcp1_config.lua  rcp1_init.lua
modules/rcp1/scripts/: build.sh
native/indexer/: Cargo.toml
native/media_sandbox/: Cargo.toml
native/os_integration/: Cargo.toml
native/search_api/: Cargo.toml
nshell/: README.md  ReadMe.txt  nshell.bat
nshell/config/: nshell.conf
nshell/src/python/: nshell_service.py
nshell/src/vbscript/: nshell.vbs
nshell/themes/: default.theme
scripts/: build-kernel.ps1  build.ps1
spdlog/: token.py
windows/: main.sh
windows/lscwm32/: localwin32.c  localwin32.h
windows/lscwm32/wfmod/: wfmod.rs
workstation/: ZamWorkstation.sh
workstation/src/: obj.vbs  session.py  workstation.py
(+7 files in other folders)
