[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
tantivy = { version = "0.19", features = ["mmap", "zstd-compression"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
neon-build = "0.10"

[features]
default = []
node = ["neon"]
