[package]
name = "media_sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
image = { version = "0.24", features = ["jpeg", "png", "webp"] }
ffmpeg-next = { version = "6.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
neon-build = "0.10"

[features]
default = []
ffmpeg = ["ffmpeg-next"]
node = ["neon"]
