[package]
name = "os_integration"
version = "0.1.0"
edition = "2021"

description = "Platform-specific OS integrations for 2Zone browser"
license = "MIT"
repository = "https://github.com/2zone/browser"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Platform-specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "winbase", "winerror"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "3.0", features = ["xml"] }
zvariant = "3.0"

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
neon-build = "0.10"

[features]
default = []
node = ["neon"]
