[package]
name = "search_api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
futures = "0.3"
async-trait = "0.1"
indexer = { path = "../indexer" }

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
neon-build = "0.10"

[features]
default = []
node = ["neon"]
